<resources>
    <string name="app_name">tecnoF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_Donaciones">Donaciones</string>
    <string name="menu_Soporte">Soporte</string>
    <string name="menu_Faq">Preguntas Frecuentes </string>
    <string name="menu_tienda">Tienda</string>
    <string name="menu_Garantia">Garantia</string>
    <string name="menu_Citas">Solicitar cita</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">814157559167-2csgnu2mm2df73ifkfrtcc0r57e15che.apps.googleusercontent.com</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>